--- a/meet/20210106_mom.md
+++ b/meet/20210106_mom.md
@@ -19,10 +19,15 @@
   - ForwardingHint 적용
     - DIFS에서만 적용하는 것으로 함
     - NDN application 에서만 적용되는 것으로 충분
-  - Key-Value Store 기능 개선
+  - Key-Value Store 기능 개선 (아래 2 옵션 중 선택)
     - nosql 또는 DBMS 적용 (redis, mongoDB, LevelDB, sqlite3 등)
-    - 현재까지 구성된 file system 구조는 Freezing
+      - 현재까지 구성된 file system 구조는 Freezing
       - 개념상 현재 구성된 DIFS를 기반으로 file system을 nosql (또는 DBMS)로 교체
+    - Key-Value Store 기능 개발
+      - 개념적으로 cache memory 개념과 일맥상통
+      - 현재 구조에서 Key(hash):Value(name) 으로 제공될 수 있도록 하기위함
+        - 현재 Value는 manifest 파일로 제공됨
+        - Value가 String으로 제공될 수 있도록 하는데 최대한 빠른 처리를 위해 메모리 구조를 지원
   - user tool 라이브러리화
     - ndnputfile, ndndelfile, ndngetfile 관련 라이브러리화
     - 라이브러리화 완료 후 INC를 위한 container에 적용하여 연동 시험
