--- a/meet/20210115_mom.md
+++ b/meet/20210115_mom.md
@@ -1,7 +1,7 @@
 ## Minutes Of Meeting
 - 안건: DIFS Key-Value Store
 - 참석자
-  - 데이터중심네트워크연구실: 신용윤, 박세형, 곽지영, 고남석(실장), 변성혁(CTO)
+  - 데이터중심네트워크연구실: 신용윤, 박세형, 곽지영, 고남석(실장), 변성혁(기술총괄)
 - 일시: 2021.01.15. (수) 14시 00분 ~ 16시 30분
 - 장소: 7-317
 
