--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -13,17 +13,44 @@ NDN의 CS (Contents Store)는 IoT 기기의 급격한 증가로 인한 트래픽
 
 ## 2. DESIGN
 
-디자인 구성
+저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
+특히, 저장소를 사용할 producer와 consumer가 간단하게 사용할 수 있도록 제공되어야 한다.
+리전별 하나의 저장소가 face 를 맺고 있으며 각 리전의 저장소들은 클러스터로 구성된다.
 
-### 2.1 Storage Cluster
+그림 들어감
+
+### 2.1 Common Name
+
+producer 및 consumer는 common name을 사용하여 간단하게 저장 서비스를 이용한다.
+저장소를 구성하는 각 노드들은 node name 과 common name 을 가진다.
+이러한 Interest 구조는 repo-ng 와 ndn-python-repo 에서도 확인할 수 있다.
+
+- ndn://{CommonName}/{command}/{RepoCommandParameter}/{Signed Interest additional components}
+  - command: 저장소에 데이터를 insert, get, delete 함
+  - RepoCommandParameter
+    - name: either a Data packet name, or a name prefix of Data packets
+    - StartBlockId (Optional): inclusive start segment number.
+    - EndBlockId (Optional): inclusive end segment number.
+    - ForwardingHint (Optional): forwarding hint for Data fetching.
+    - RegisterPrefix(Optional): if repo doesn’t register the root prefix, client can tell repo to register this prefix.
+    - CheckPrefix: a prefix of status check topic name.
+    - ProcessId: a random byte string to identify this insertion process.
+
+보다 쉽게 사용할 수 있도록 repo-ng 에서 제공하는 user tool 을 지원한다.
+
+- ndnputfile {CommonName} {ServiceName} {DataPacketPrefix}
+- ndngetfile {CommonName} {ServiceName}
+- ndndelfile {CommonName} {ServiceName}
+
+### 2.2 Storage Cluster
 
 
 
-### 2.2 Manifest
+### 2.3 Manifest
 
 
 
-### 2.3 Signature
+### 2.4 Signature
 
 
 
