--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -9,8 +9,20 @@
 NDN은 미래 인터넷 아키텍처로서 보안, delay tolerant, hop by hop 라우팅, 이동성 지원을 포함하고 있다.
 특히 IPv4 기반 기존 인터넷의 트래픽 중복 문제를 해결할 수 있을 것으로 기대된다.
 NDN의 CS (Contents Store) 는 IoT 기기의 급격한 증가로 인한 트래픽 급증 문제를 해소할 것으로 예상된다.
+NDN \cite{ndn} intrinsically has the capability to cache data which is being used frequently by many consumers, as close as to them. 
+However, the in-network caching alone is not sufficient for general data storage which is required in edge network environment \cite{icn}.
+There are a few NDN-based repositories such as repo-ng \cite{repong} and NDNFS \cite{ndnfs}, which are not designed for distributed networks.
+They are also known to be unstable, especially for large-sized data. 
+Let alone, NDN does not have any available distributed repository systems to the best of our knowledge, which is mainly due to a relatively short history of NDN.
+In this paper, we propose a novel distributed repository, Chipmunk, extending repo-ng with many overall changes.
+Chipmunk separates actual file storage of data from its metadata having the information of the data including its location; data is stored in distributed Chipmunk nodes in the vicinity of producers and its metadata having the information for the data is synchronized to other Chipmunk nodes. 
+When a remote consumer, which is located in the other area from where the data it wants to download is produced, wants to download the data, it will find its actual repository by looking at the metadata first.
 
-NDN 에서 persistent data storage 가 반드시 필요하다.
+Chipmunk makes the following contributions:
+
+- It provides an NDN based object storage and enable a filesystem as a service with horizontal scalability by choosing a distributed architecture instead of a centralized one.
+- Applications leveraging Chipmunk can opt to use various different consistency policies such as eventual consistency, weak consistency, or no consistency to meet their requirements.
+- NDN 기반의 persistent data storage 를 제공한다.
 
 이 논문은 다음과 같이 구성된다.
 섹션 2 는 related work 를 설명한다.
@@ -46,6 +58,13 @@ NDNFS features are:
 NDNFS operates data in conformity with the FUSE interfaces.
 FUSE executes a file system by bridging the user space to the kernel space through VFS (Virtual File System).
 That is, the storage is mounted on the system like a NAS (Network Attached Storage) and you can copy or delete files using system commands.
+
+### ndn-python-repo (추가 필요?)
+
+An NDN Repository implementation using python-ndn \cite{pythonndn}.
+ndn-python-repo features are:
+
+-
 
 ## 3. DESIGN
 
