--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -17,11 +17,11 @@ The paper also discusses how to improve the performance of Chipmunk as a future 
 
 ## 1. INTRODUCTION
 
-NDN은 미래 인터넷 아키텍처로서 보안, delay tolerant, hop by hop 라우팅, 이동성 지원을 포함하고 있다.
-특히 IPv4 기반 기존 인터넷의 트래픽 중복 문제를 해결할 수 있을 것으로 기대된다.
-NDN의 CS (Contents Store) 는 IoT 기기의 급격한 증가로 인한 트래픽 급증 문제를 해소할 것으로 예상된다.
+NDN (Named Data Networking) is a future Internet architecture that includes support for security, delay tolerance, hop by hop routing, and mobility.
+In particular, it is expected to solve traffic redundancy problems for existing IPv4-based Internet.
+The CS (Content Store) of NDN can address the problem of traffic spikes due to the rapid increase in IoT devices.
 NDN \cite{ndn} intrinsically has the capability to cache data which is being used frequently by many consumers, as close as to them. 
-However, the in-network caching alone is not sufficient for general data storage which is required in edge network environment \cite{icn}.
+However, the in-network caching alone is not sufficient for general data storage which is required in network environment \cite{icn}.
 There are a few NDN-based repositories such as repo-ng \cite{repong} and NDNFS \cite{ndnfs}, which are not designed for distributed networks.
 They are also known to be unstable, especially for large-sized data. 
 Let alone, NDN does not have any available distributed repository systems to the best of our knowledge, which is mainly due to a relatively short history of NDN.
@@ -33,13 +33,15 @@ Chipmunk makes the following contributions:
 
 - It provides an NDN based object storage and enable a filesystem as a service with horizontal scalability by choosing a distributed architecture instead of a centralized one.
 - Applications leveraging Chipmunk can opt to use various different consistency policies such as eventual consistency, weak consistency, or no consistency to meet their requirements.
-- NDN 기반의 persistent data storage 를 제공한다.
+- It provides easy access for users (producers, consumers) who utilize chipmunk.
+- It provides scalable persistent data storage based on NDN.
+- It provides a data security method in a very simple way to reduce the overhead of users.
 
-이 논문은 다음과 같이 구성된다.
-섹션 2 는 related work 를 설명한다.
-섹션 3 에서 우리는 전반적인 아키텍쳐와 상세한 절차를 설명한다.
-섹션 4 는 우리가 제안한 결과의 성능을 분석한다.
-섹션 5 는 향후 작업에 대하여 다루고 있으며 섹션 6 은 결론을 내린다.
+The rest of this paper is organized as follows.
+Section 2 provides related work.
+In Section 3, we describe the overall architecture and detailed procedures of Chipmunk.
+In Section 4, we analyze the performance of Chipmunk. 
+Section 5 covers concludes and future work to improve the Chipmunk.
 
 ## 2. RELATED WORK
 
@@ -77,7 +79,7 @@ ndn-python-repo features are:
 
 -
 
-## 3. DESIGN
+## 3. DESIGN OF CHIPMUNK
 
 저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
 특히, 저장소를 사용할 사용자인 producer와 consumer가 간단하게 사용할 수 있도록 제공되어야 한다.
