--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -1,4 +1,4 @@
-# TITLE: 
+# Chipmunk: a Simple and Elastic NDN Repository
 
 ## ABSTRACT
 
@@ -16,6 +16,11 @@ The paper also discusses how to improve the performance of Chipmunk as a future 
 ## KEYWORDS
 
 ## 1. INTRODUCTION
+
+Edge computing \cite{edgecomputing} is transforming the way data is being handled, processed, and delivered from millions of internet-connected devices around the world.
+The explosive growth of the internet-connected devices along with emerging real-time applications, continues to drive edge computing technologies.
+Edge computing does require bringing not only computation but also data storage closer to the devices where it’s being produced.
+There are some available distributed data stores in IP networks such as IPFS (Interplanetary File System) \cite{ipfs} and HDFS (Hadoop Distributed File System) \cite{hadoop}.
 
 NDN (Named Data Networking) is a future Internet architecture that includes support for security, delay tolerance, hop by hop routing, and mobility.
 In particular, it is expected to solve traffic redundancy problems for existing IPv4-based Internet.
