--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -88,24 +88,27 @@ ndn-python-repo features are:
 
 저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
 특히, 저장소를 사용할 사용자인 producer와 consumer가 간단하게 사용할 수 있도록 제공되어야 한다.
-리전별 하나의 저장소가 face 를 맺고 있으며 각 리전의 저장소들은 클러스터로 구성된다.
+리전은 리전에서 발생한 데이터의 저장을 담당하는 저장소가 face 등록을 통하여 연결되어 있고 각 리전의 저장소들은 클러스터로 구성된다.
 
 ![](https://github.com/uni2u/difs/blob/documents/img/acm21-difs_region.png)
 
-각 리전의 사용자들은 common name 을 사용하여 리전에 설정된 NDN 라우터를 통해 Chipmunk 저장소로 접근한다.
-각 리전의 Chipmunk 노드는 클러스터를 구성하며 node name 으로 face 를 설정하여 연결한다.
+각 리전의 사용자들은 common name 을 사용하여 리전에 설정된 NDN 라우터에 등록된 Chipmunk 저장소로 접근한다.
+Chipmunk 저장 관리자는 저장 노드 클러스터를 구성하며 node name 으로 서로 face 를 등록하여 연결한다.
 Chipmunk 클러스터는 HDFS (Hadoop Distributed File System) 및 GFS (Google File System) 등의 디자인과 유사한 구조를 가진다.
-클러스터를 관리하는 manager 노드가 저장노드의 관리하는데 각 노드의 hash range 를 구성한다.
+클러스터를 관리하는 manager 노드를 통하여 클러스터를 구성하고 관리하며 클러스터 각 노드의 hash range 를 설정한다.
 이와같은 디자인은 cassandra ring 디자인을 참조하였다.
 
 ![](https://github.com/uni2u/difs/blob/documents/img/acm21-ring00.png)
 
 producer 의 데이터 저장 요청 Interest 를 수신한 노드는 NDN 데이터 패킷을 저장한다.
-이때 producer 는 Chipmunk 저장소에 저장할 데이터의 service name 을 지정하며 저장 요청을 수신한 노드는  service name 을 해시하여 그 결과값을 각 노드마다 설정된 hash range 와 비교하고 manifest 파일을 제공할 노드를 선택한다.
-즉, manifest 파일에는 service name 에 대한 데이터 패킷을 실제 저장하고 있는 노드의 node name 이 위치한다.
+이때 producer 는 Chipmunk 저장소에 저장할 데이터의 service name 을 지정하며 저장 요청을 수신한 노드는 service name 을 해시하여 그 결과값을 각 노드마다 설정된 hash range 와 비교하고 manifest 파일을 제공할 노드를 선택한다.
+manifest 파일에는 service name 에 대한 데이터 패킷을 실제 저장하고 있는 노드의 node name 이 포함된다.
 consumer 는 리전에 상관없이 common name 및 service name 을 사용하여 데이터를 요청한다.
 데이터 요청을 수신한 Chipmunk 노드는 service name 을 해시하고 그 결과를 각 노드마다 설정된 hash range 와 비교하고 manifest 제공 노드를 통해 manifest 파일로 응답한다.
+이것은 같은 service name 을 해시한 결과는 같다는 hash 의 특성을 이용한 것으로 service name 에 대하여 일정한 manfiest 파일을 제공 노드를 선택할 수 있다.
 consumer 는 manifest 파일을 확인하고 실제 데이터 패킷을 저장하고 있는 저장 노드에게 데이터 요청 Interest 를 전송하는 것으로 실제 데이터를 제공 받는다.
+
+![](https://github.com/uni2u/difs/blob/documents/img/acm21-insertget.png)
 
 ### 3.1 Common Name
 
