--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -30,7 +30,7 @@ However, the in-network caching alone is not sufficient for general data storage
 There are a few NDN-based repositories such as repo-ng \cite{repong} and NDNFS \cite{ndnfs}, which are not designed for distributed networks.
 They are also known to be unstable, especially for large-sized data. 
 Let alone, NDN does not have any available distributed repository systems to the best of our knowledge, which is mainly due to a relatively short history of NDN.
-In this paper, we propose a novel distributed repository, Chipmunk, extending repo-ng with many overall changes.
+In this paper, we propose a novel simple elastic repository system, Chipmunk, extending repo-ng with many overall changes.
 Chipmunk separates actual file storage of data from its metadata having the information of the data including its location; data is stored in distributed Chipmunk nodes in the vicinity of producers and its metadata having the information for the data is synchronized to other Chipmunk nodes. 
 When a remote consumer, which is located in the other area from where the data it wants to download is produced, wants to download the data, it will find its actual repository by looking at the metadata first.
 
@@ -86,13 +86,27 @@ ndn-python-repo features are:
 
 ## 3. DESIGN OF CHIPMUNK
 
-저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
+In Chipmunk, we focus on tackling the following characteristics to satisfy the emerging demands for network storages and maximizes the benefits of adopting NDN.
+
+- Productivity: the speed of data generation should be guaranteed when processing and storing data.
+- Volume: new repositories should be able to store large files from tens of terabytes to tens of petabytes or more.
+- Heterogeneity: data types should be classified according to the degrees of their structuredness of data. Data in the Relational database is considered structured data. JSON and XML formatted data are semi-structured data. Regular files such as video files and documents are considered unstructured data.
+- Context-awareness: as the meaning changes in context, data also changes according to its usage.
+- Visualization: it is about analyzing gathered data to extract information and presenting it in a way that users can understand more easily through visual aids.
+
+The most well-known storage systems that satisfy the above characteristics are object storage systems \cite{objectstorage}.
+In an Object storage, a file are broken up into small chunks and distributed over many computer storages.
+Object storages offer independent storage and use unique identifiers to map objects and metadata to manage them.
+It is especially popular as a cloud solution since it is convenient to meter the usage and offer a plan that pays for the metered usage.
+We believe adopting the characteristics of object storage into an NDN repository is very desirable.
+
+또한 저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
 특히, 저장소를 사용할 사용자인 producer와 consumer가 간단하게 사용할 수 있도록 제공되어야 한다.
 리전은 리전에서 발생한 데이터의 저장을 담당하는 저장소가 face 등록을 통하여 연결되어 있고 각 리전의 저장소들은 클러스터로 구성된다.
 
 ![](https://github.com/uni2u/difs/blob/documents/img/acm21-difs_region.png)
 
-각 리전의 사용자들은 common name 을 사용하여 리전에 설정된 NDN 라우터에 등록된 Chipmunk 저장소로 접근한다.
+각 리전 사용자들은 common name 을 사용하여 리전의 NDN 라우터에 등록된 Chipmunk 저장소로 접근한다.
 Chipmunk 저장 관리자는 저장 노드 클러스터를 구성하며 node name 으로 서로 face 를 등록하여 연결한다.
 Chipmunk 클러스터는 HDFS (Hadoop Distributed File System) 및 GFS (Google File System) 등의 디자인과 유사한 구조를 가진다.
 클러스터를 관리하는 manager 노드를 통하여 클러스터를 구성하고 관리하며 클러스터 각 노드의 hash range 를 설정한다.
