--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -146,6 +146,15 @@ As shown in Figure \ref{fig:retrieval}, the retrieval procedure of a data is per
 
 ### 3.1 Common Name
 
+In the NDN, all objects (data, nodes, etc.) use the only name to represent themselves.
+For example, the 'test.mp4' file in the '/data/music directory' of a node named 'c01' in a network named 'a/b' is named '/a/b/c01/data/music/test.mp4'.
+This means that access is possible only when the network address, node name, and data name of the data provider are fully known.
+This naming structure is inefficient in the data storage model.
+Especially, it is very difficult to fully verify the storage location of each data in order to store a large number of data generated in the IoT environment. \par
+Chipmunk is distributed repository that efficiently delivers data write/read through common repository naming.
+In other words, it provides a consistent name.
+It can be remotely connected to the repository through a common-name anywhere in the network.
+
 Chipmunk 저장 클러스터의 사용자인 producer 및 consumer는 common name을 사용하여 간단하게 저장 서비스를 이용한다.
 저장소를 구성하는 각 노드들은 node name 과 common name 을 가진다.
 이러한 Interest 구조는 repo-ng 와 ndn-python-repo 에서도 확인할 수 있다.
@@ -161,13 +170,10 @@ Chipmunk 저장 클러스터의 사용자인 producer 및 consumer는 common nam
     - CheckPrefix: a prefix of status check topic name.
     - ProcessId: a random byte string to identify this insertion process.
 
-저장소 서비스 제공자는 사용자와의 계약을 통한 인증을 별도로 진행한다.
-인증이 완료된 사용자는 CommonName 을 사용하여 쉽고 간단하게 Chipmunk 시스템으로 접근을 허용한다.
-Chipmunk 저장소는 보다 쉽게 사용할 수 있도록 repo-ng 에서 제공하는 user tool 을 지원한다.
-
-- ndnputfile {CommonName} {ServiceName} {DataPacketPrefix}
-- ndngetfile {CommonName} {ServiceName}
-- ndndelfile {CommonName} {ServiceName}
+The data provider inserts the data into the repository using the common name and 'insert' commands in the repository.
+The service-name of the data to be provided should not overlap in the Chipmunks network.
+The data consumer receives data for the requested data name using the common name and 'get' commands. \par
+All nodes that make up a Chipmunk cluster have common repository names, and each node has a node has its own node name.
 
 ### 3.2 Storage Cluster
 
