--- a/paper/20210422_paper01.md
+++ b/paper/20210422_paper01.md
@@ -102,7 +102,7 @@ We believe adopting the characteristics of object storage into an NDN repository
 
 또한 저장소 서비스를 제공하는 사업자 또는 저장소가 필요한 프라이빗 클라우드에서 쉽고 간단하게 사용할 수 있어야 한다.
 특히, 저장소를 사용할 사용자인 producer와 consumer가 간단하게 사용할 수 있도록 제공되어야 한다.
-리전은 리전에서 발생한 데이터의 저장을 담당하는 저장소가 face 등록을 통하여 연결되어 있고 각 리전의 저장소들은 클러스터로 구성된다.
+리전에서 발생한 데이터의 저장을 담당하는 저장소가 face 등록을 통하여 연결되어 있고 각 리전의 저장소들은 클러스터로 구성된다.
 
 ![](https://github.com/uni2u/difs/blob/documents/img/acm21-difs_region.png)
 
