--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -11,10 +11,20 @@
 
 ## 주요내용
 
-### 기능개선-KeyValue Store (mongodb)
-#### 이슈 (기능개선-KeyValue Store)
+### 1. 기능개선-KeyValue Store (mongodb)
+#### 1-1. 상태 (기능개선-KeyValue Store)
+- mongodb 기반의 저장소 구축
+  - db: difs
+  - collection: data/manifest
+#### 1-2. 이슈 (기능개선-KeyValue Store)
+- 현재까지 이슈 없음
+- mongodb 자체가 메모리 영향을 받기 때문에 주의깊게 테스트 중
+- mongodb 자체의 성능 향상 포인트를 찾아 적용해볼 수 있음
 
-### 기능개선-모니터링
+---
+
+### 2. 기능개선-모니터링
+#### 2-1. 상태 (기능개선-모니터링)
 - 클러스터링 정보
   - `build/bin/ndngetKeyInfo /<common-name>`
     - keyspace file 을 통한 클러스터링 정보 확인
@@ -26,7 +36,7 @@
     - 노드 데이터 (manifest, segment) 정보 확인
   - dashboard 파트와 연동 테스트 예정 (8월)
     - `ndn://<node-name>/nodeinfo` 
-#### 2.2 이슈 (기능개선-모니터링)
+#### 2-2. 이슈 (기능개선-모니터링)
 - 노드 정보에서 manifest 및 segment 는 매우 많아질 수 있음
 - 이 경우 노드 정보 요청 _Interest_ 에 대한 응답이 8,800K 를 넘어설 수 있음
   - 방안1) dashboard 측에서 노드 정보 데이터를 sequence 에 따라 처리
@@ -35,10 +45,45 @@
     - 저장중인 데이터의 ndn-name 으로 segments 를 대신하거나
     - segments 를 모두 표기하지 않고 최초 segment 외 x 개로 표기 
 
-### 기능개선-동적노드구성
-#### 이슈 (기능개선-동적노드구성)
+---
 
-### 기능개선-HashChain 1차
+### 3. 기능개선-동적노드구성
+#### 3-1. 상태 (기능개선-동적노드구성)
+- 오퍼레이터 (저장소, 네트워크 관리자) 가 노드를 추가하는 것을 가정함
+  - 오퍼레이터는 관리하는 저장소 및 네트워크의 name 등을 모두 알고 있음
+- db type 을 config 에 명시하여 동작
+  - 추가 노드에 manager, from, to 노드 name 명시
+- 현재 fs, mongodb 타입 구성 가능
+  - 혼합 구성 가능
+- keyspace 구성 및 업데이트 확인
+  - 노드가 추가된 경우 keyspace 업데이트
+- manifestList 생성 및 manifest 이동 확인
+  - 노드 추가 및 삭제에 따른 manifest 이동
+#### 3-2. 이슈 (기능개선-동적노드구성)
+- 노드가 2개만 남은 경우 (manager, node) 일반 노드 delete
+  - version check, fetch, coordination 과정 후 manifestList 요청
+  - manager 노드가 자신에게 version check, fetch, coordination 을 하지 않기 때문에 문제 발생
+  - manager 노드가 coordination 과정을 자신에게 보내고 manifestList 를 가져올 수 있도록 함
+
+---
+
+### 4. 기능개선-INC 연동
+#### 4-1. 상태 (기능개선-INC 연동)
+- INC container 를 미리 생성한다는 의미에서 producer 가 INC 로 생성된 container 인 경우
+  - DIFS 는 container 로 데이터를 요청하여야 하는데
+  - container 가 어떤 name 으로 생성되었는지 알 수 없기 때문에
+  - container 가 생성되면 container 에서 full-prefix 를 DIFS 로 전달할 수 있어야 함
+    - REPO_PARAMETER_NODE_PREFIX 정의
+    - container 는 완전하게 생성된 후 full-prefix 를 ForwardingHint 에 실어 ndnputfile 시 DIFS 로 전송
+    - 기본적으로 ForwardingHint 와 동일 동작
+#### 4-2. 이슈 (기능개선-INC 연동)
+- 구현중
+- INC 파트에서 해당 기능이 검증되어야 하며 이때 DIFS lib 도 함께 검증할 수 있도록 함
+
+---
+
+### 5. 기능개선-HashChain 1차
+#### 5-1. 상태 (기능개선-HashChain 1차)
 - metaInfo 의 AppMetaInfo 를 사용하고자 하였으나 NFD 까지 영향이 있는 것으로 확인하여 더이상 진행하지 않음
 - content 필드의 앞부분 32bit 를 사용한 next-hash 구성
 - ndn-cxx 0.7.1 에 hc-key-chain 및 hc-segment-fetcher 클래스 생성
@@ -49,7 +94,7 @@
     - validator 는 hc-segment-fetcher 를 활용함
     - 데이터를 저장함에 있어 검증을 거친 후 저장이 완료됨
       - consumer 는 별도로 검증 작업을 진행하여야 함
-#### 이슈 (기능개선-HashChain 1차)
+#### 5-2. 이슈 (기능개선-HashChain 1차)
 - 데이터가 순서대로 전송되지 않는 경우
   - 현재 TCP 모드에서 순서를 보장해 주는 것으로 가정하고 있음
   - 현재 다른 파트의 예에서 순서 보장이 되는 것으로 확인함
@@ -61,10 +106,23 @@
     - 데이터가 순서대로 오지 않으면 일정시간 대기후 timeout 발생
     - 일정시간 대기로 인하여 성능이 저하될 수 있음
 
-### 성능개선
-#### ForwardingHint
+---
 
-#### HashChain 1차
+### 6 성능개선
+- 성능 개선 관련 이슈는 아래와 같음
+#### 6-1. ForwardingHint
+- operator 가 insert 요청시 적용한 ndn-name 으로 저장
+  - 기존: node-name/ndn-name
+  - 변경: ndn-name 
+- 저장 노드의 라우팅 테이블 '/' 로 고정
+  - 기존: ndn-name 마다 라우팅 테이블 생성
+  - 변경: / 적용으로 모든 트래픽이 root 를 향할 수 있도록 함
+- 현재까지 특별한 이슈 없음
+
+#### 6-2. 코드 최적화
+- 중복 코드 정리 및 메커니즘 정리
+
+#### 6-3. HashChain 1차
 - 데이터 패킷 구성 지연
   - 현재 Backward Chain 기반의 HashChain 구성으로 완전체 패킷을 뒤에서 부터 읽고 hash 를 만들어 next-hash 를 구성
   - next-hash 가 구성된 후 다시 1번 패킷부터 블록 생성
@@ -95,11 +153,11 @@
 
 ---
 
-### 기능개선-HashChain 2차
+## 기능개선-HashChain 2차
 - 주 담당자: 박세형 선임
 - 예상 시행 시기: 9월, 10월
 
-#### 이슈 (기능개선-HashChain 2차)
+### 7-1. 이슈 (기능개선-HashChain 2차)
 - TLV 를 사용한 next-hash 적용으로 프로세스를 줄이고자 함
 - DIFS 뿐만 아니라 여러 application 에서 활용 가능할 수 있도록 하기 위함
 - Signature Value 에 신규 TLV 추가
