--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -9,7 +9,7 @@
 
 ---
 
-## 주요내용
+## [기능개선]
 
 ### 1. 기능개선-KeyValue Store (mongodb)
 #### 1-1. 상태 (기능개선-KeyValue Store)
@@ -82,8 +82,8 @@
 
 ---
 
-### 5. 기능개선-HashChain 1차
-#### 5-1. 상태 (기능개선-HashChain 1차)
+### 5. 기능개선-HashChain ver1
+#### 5-1. 상태 (기능개선-HashChain ver1)
 - metaInfo 의 AppMetaInfo 를 사용하고자 하였으나 NFD 까지 영향이 있는 것으로 확인하여 더이상 진행하지 않음
 - content 필드의 앞부분 32bit 를 사용한 next-hash 구성
 - ndn-cxx 0.7.1 에 hc-key-chain 및 hc-segment-fetcher 클래스 생성
@@ -94,7 +94,7 @@
     - validator 는 hc-segment-fetcher 를 활용함
     - 데이터를 저장함에 있어 검증을 거친 후 저장이 완료됨
       - consumer 는 별도로 검증 작업을 진행하여야 함
-#### 5-2. 이슈 (기능개선-HashChain 1차)
+#### 5-2. 이슈 (기능개선-HashChain ver1)
 - 데이터가 순서대로 전송되지 않는 경우
   - 현재 TCP 모드에서 순서를 보장해 주는 것으로 가정하고 있음
   - 현재 다른 파트의 예에서 순서 보장이 되는 것으로 확인함
@@ -108,9 +108,9 @@
 
 ---
 
-### 6 성능개선
-- 성능 개선 관련 이슈는 아래와 같음
-#### 6-1. ForwardingHint
+## [성능개선]
+
+### 1. 성능개선-ForwardingHint
 - operator 가 insert 요청시 적용한 ndn-name 으로 저장
   - 기존: node-name/ndn-name
   - 변경: ndn-name 
@@ -119,10 +119,10 @@
   - 변경: / 적용으로 모든 트래픽이 root 를 향할 수 있도록 함
 - 현재까지 특별한 이슈 없음
 
-#### 6-2. 코드 최적화
+### 2. 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
 
-#### 6-3. HashChain 1차
+### 3. 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
   - 현재 Backward Chain 기반의 HashChain 구성으로 완전체 패킷을 뒤에서 부터 읽고 hash 를 만들어 next-hash 를 구성
   - next-hash 가 구성된 후 다시 1번 패킷부터 블록 생성
@@ -153,11 +153,11 @@
 
 ---
 
-## 기능개선-HashChain 2차
+## [기능개선-HashChain 2차]
 - 주 담당자: 박세형 선임
 - 예상 시행 시기: 9월, 10월
 
-### 7-1. 이슈 (기능개선-HashChain 2차)
+### 1. 기능개선-HashChain ver2
 - TLV 를 사용한 next-hash 적용으로 프로세스를 줄이고자 함
 - DIFS 뿐만 아니라 여러 application 에서 활용 가능할 수 있도록 하기 위함
 - Signature Value 에 신규 TLV 추가
