--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -108,6 +108,18 @@
 
 ---
 
+### 6. 1차 KOREN 연동
+#### 6-1. 상태 (1차 KOREN 연동)
+- 8월 KOREN 망 연동 테스트 예정
+- 연동 모듈: mwNFD, INC, dashboard
+  - mwNFD: 연동에 문제가 없다고 이야기 하지만 실제 연동에는 문제가 발생할 수 있음
+  - INC: INC 파트에서 DIFS 와 연동 관련 로컬 테스트를 진행하지 않는한 DIFS 에서는 로컬 연동 테스트를 할 수 없음
+  - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 7월 3주차에 dashboard 담당자에게 메일 연락 예정
+#### 6-2. 이슈 (1차 KOREN 연동)
+- 8월 연동 일정에 따라 이슈 대처 예정
+
+---
+
 ## [성능개선]
 
 ### 1. 성능개선-ForwardingHint
@@ -150,6 +162,16 @@
     - 소비자는 다운로드 중인 현재 패킷에 이상이 있으면 즉시 데이터 요청을 하지 않아야 하기 때문
       - Backward Chain 의 경우 현재 패킷에 next-hash 가 DigestSha256 으로 구성
       - 소비자 입장에서 현재 다운로드 된 패킷을 검증할 때 이미 다운로드 된 이전 패킷의 next-hash 로 즉시 검증
+
+---
+
+### 4. 2차 KOREN 연동
+#### 4-1. 상태 (2차 KOREN 연동)
+- 10월 KOREN 망 연동 테스트 예정
+  - 8월 1차 연동으로 인하여 테스트 문제는 해소될 것으로 예상
+  - 10월에는 성능 관련 업데이트 사항이 주된 목표
+#### 4-2. 이슈 (2차 KOREN 연동)
+- 10월 연동 일정에 따라 이슈 대처 예정
 
 ---
 
