--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -1,6 +1,9 @@
 
 ## Minutes Of Meeting
 - 안건: DIFS 테스트 베드 구성 및 이슈 협의
+  - 아래 명시함 (기능개선, 성능개선, HashChain ver2)
+    - 우선순위 아님
+    - 회의 진행을 위하여 비교적 간단한 내용을 먼저 작성함
 - 참석자
   - 데이터중심네트워크연구실: 신용윤, 박세형
   - 구름네트웍스: 김성호, 박태웅
