--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -117,7 +117,8 @@
 - 연동 모듈: mwNFD, INC, dashboard
   - mwNFD: 연동에 문제가 없다고 이야기 하지만 실제 연동에는 문제가 발생할 수 있음
   - INC: INC 파트에서 DIFS 와 연동 관련 로컬 테스트를 진행하지 않는한 DIFS 에서는 로컬 연동 테스트를 할 수 없음
-  - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 7월 3주차에 dashboard 담당자에게 메일 연락 예정
+  - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 본 회의 후 dashboard 담당자에게 메일 연락 예정
+    - _Interest_ 및 json 형식의 string 예제 전달
 #### 6-2. 이슈 (1차 KOREN 연동)
 - 8월 연동 일정에 따라 이슈 대처 예정
 
