--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -47,6 +47,11 @@
   - 방안2) summary 를 사용한 요약 정보로 응답
     - 저장중인 데이터의 ndn-name 으로 segments 를 대신하거나
     - segments 를 모두 표기하지 않고 최초 segment 외 x 개로 표기 
+  - 방안3) data 의 경우 첫번째 sequence 만 표기
+    - manifest 는 리스트가 길어져도 무관
+    - data 는 segment 가 모두 표기되기 때문에 하나의 데이터라도 수많은 리스트가 발생할 수 있음
+    - data 는 무조건 segment 의 첫번째만 표기함
+    - 서로 다른 데이터에 대한 segment 를 구분할 수 있는지 확인 필요
 
 ---
 
@@ -67,6 +72,7 @@
   - version check, fetch, coordination 과정 후 manifestList 요청
   - manager 노드가 자신에게 version check, fetch, coordination 을 하지 않기 때문에 문제 발생
   - manager 노드가 coordination 과정을 자신에게 보내고 manifestList 를 가져올 수 있도록 함
+  - 성능 개선 (8월) 이후 시간이 된다면 적용
 
 ---
 
@@ -108,6 +114,7 @@
   - 방안2) timeout 적용
     - 데이터가 순서대로 오지 않으면 일정시간 대기후 timeout 발생
     - 일정시간 대기로 인하여 성능이 저하될 수 있음
+  - 성능 개선 (8월) 이후 시간이 된다면 적용 
 
 ---
 
@@ -139,6 +146,7 @@
 - 중복 코드 정리 및 메커니즘 정리
 
 ### 3. 성능개선-HashChain 1차
+- 8월말 까지 목표로 성능 개선에 중점
 - 데이터 패킷 구성 지연
   - 현재 Backward Chain 기반의 HashChain 구성으로 완전체 패킷을 뒤에서 부터 읽고 hash 를 만들어 next-hash 를 구성
   - next-hash 가 구성된 후 다시 1번 패킷부터 블록 생성
