--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -8,6 +8,8 @@
   - 데이터중심네트워크연구실: 신용윤, 박세형
   - 구름네트웍스: 김성호, 박태웅
 - 일시: 2021.07.15. (목) 11시 00분 ~ 16시 30분
+  - COVID19 에 대한 원내 지침으로 2주간 연기
+  - **예정: 2021.07.29. (목) 11시 00분 ~ 16시 30분**
 - 장소: 7-286
 
 ---
