--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -15,6 +15,9 @@
 ---
 
 ## [기능개선]
+- 기본 기능 확인 완료
+- 발생가능한 모든 CASE 에 대응하는 것은 현 단계에서 필요하지 않은 것으로 판단함
+- 단, 주요 이슈인 경우 예외적으로 적용할 수 있도록 함
 
 ### 1. 기능개선-KeyValue Store (mongodb)
 #### 1-1. 상태 (기능개선-KeyValue Store)
@@ -134,6 +137,8 @@
 ---
 
 ## [성능개선]
+- 8월말 까지 목표로 성능 개선에 중점
+- 특히, HashChain 의 경우 여러 방안을 고민할 필요가 있음
 
 ### 1. 성능개선-ForwardingHint
 - operator 가 insert 요청시 적용한 ndn-name 으로 저장
@@ -148,7 +153,6 @@
 - 중복 코드 정리 및 메커니즘 정리
 
 ### 3. 성능개선-HashChain 1차
-- 8월말 까지 목표로 성능 개선에 중점
 - 데이터 패킷 구성 지연
   - 현재 Backward Chain 기반의 HashChain 구성으로 완전체 패킷을 뒤에서 부터 읽고 hash 를 만들어 next-hash 를 구성
   - next-hash 가 구성된 후 다시 1번 패킷부터 블록 생성
@@ -160,10 +164,10 @@
     - hash 를 의미있게 만들어 보는 방법
       - 블록 갯수, node-name, ndn-name 등을 활용한 규칙성 있는 hash 생성
         - hash 를 미리 알 수 있기 때문에 바로 블록을 구성할 수 있을 것으로 예상
-        - 예) aa 11 cc bb 22 dd
-          - aa bb : node-name 을 hash 한 값의 일부 적용
+        - 예) aa 11 yy bb 22 zz
+          - aa bb : ndn-name 을 hash 한 값의 일부 적용
           - 11 22 : 블록 갯수를 hash 한 값의 일부 적용
-          - cc dd : ndn-name 을 hash 한 값의 일부 적용
+          - yy zz : sequence number 를 hash 한 값의 일부 적용
 - 방안2) Forward Chain 기반의 HashChain 구성
   - 각 패킷이 next-hash 가 아닌 previous-hash 를 가지게 됨
   - DigestSha256 값에 previous-hash 를 넣어 패킷 구성
