--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -17,6 +17,7 @@
 ## [기능개선]
 - 기본 기능 확인 완료
 - 발생가능한 모든 CASE 에 대응하는 것은 현 단계에서 필요하지 않은 것으로 판단함
+- 성능개선 (8월) 을 우선하며 성능개선 이후 여유가 되는 경우 적용함을 원칙으로 함 
 - 단, 주요 이슈인 경우 예외적으로 적용할 수 있도록 함
 
 ### 1. 기능개선-KeyValue Store (mongodb)
