--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -97,8 +97,8 @@
 
 ---
 
-### 5. 기능개선-HashChain ver1
-#### 5-1. 상태 (기능개선-HashChain ver1)
+### 5. 기능개선-HashChain 1차
+#### 5-1. 상태 (기능개선-HashChain 1차)
 - metaInfo 의 AppMetaInfo 를 사용하고자 하였으나 NFD 까지 영향이 있는 것으로 확인하여 더이상 진행하지 않음
 - content 필드의 앞부분 32bit 를 사용한 next-hash 구성
 - ndn-cxx 0.7.1 에 hc-key-chain 및 hc-segment-fetcher 클래스 생성
@@ -109,7 +109,7 @@
     - validator 는 hc-segment-fetcher 를 활용함
     - 데이터를 저장함에 있어 검증을 거친 후 저장이 완료됨
       - consumer 는 별도로 검증 작업을 진행하여야 함
-#### 5-2. 이슈 (기능개선-HashChain ver1)
+#### 5-2. 이슈 (기능개선-HashChain 1차)
 - 데이터가 순서대로 전송되지 않는 경우
   - 현재 TCP 모드에서 순서를 보장해 주는 것으로 가정하고 있음
   - 현재 다른 파트의 예에서 순서 보장이 되는 것으로 확인함
@@ -152,6 +152,7 @@
 
 ### 2. 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
+- mongoDB 최적화
 
 ### 3. 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
