--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -19,8 +19,10 @@
 - 발생가능한 모든 CASE 에 대응하는 것은 현 단계에서 필요하지 않은 것으로 판단함
 - 성능개선 (8월) 을 우선하며 성능개선 이후 여유가 되는 경우 적용함을 원칙으로 함 
 - 단, 주요 이슈인 경우 예외적으로 적용할 수 있도록 함
+  - INC 연동
+  - 모니터링 (협의 필요)
 
-### 1. 기능개선-KeyValue Store (mongodb)
+### 1. (완-반복테스트) 기능개선-KeyValue Store (mongodb)
 #### 1-1. 상태 (기능개선-KeyValue Store)
 - mongodb 기반의 저장소 구축
   - db: difs
@@ -61,7 +63,7 @@
 
 ---
 
-### 3. 기능개선-동적노드구성
+### 3. (완-반복테스트) 기능개선-동적노드구성
 #### 3-1. 상태 (기능개선-동적노드구성)
 - 오퍼레이터 (저장소, 네트워크 관리자) 가 노드를 추가하는 것을 가정함
   - 오퍼레이터는 관리하는 저장소 및 네트워크의 name 등을 모두 알고 있음
@@ -79,6 +81,7 @@
   - manager 노드가 자신에게 version check, fetch, coordination 을 하지 않기 때문에 문제 발생
   - manager 노드가 coordination 과정을 자신에게 보내고 manifestList 를 가져올 수 있도록 함
   - 성능 개선 (8월) 이후 시간이 된다면 적용
+    - 현 상태를 완료로 보아도 무방함
 
 ---
 
@@ -141,7 +144,7 @@
 - 8월말 까지 목표로 성능 개선에 중점
 - 특히, HashChain 의 경우 여러 방안을 고민할 필요가 있음
 
-### 1. 성능개선-ForwardingHint
+### 1. (완-반복테스트) 성능개선-ForwardingHint
 - operator 가 insert 요청시 적용한 ndn-name 으로 저장
   - 기존: node-name/ndn-name
   - 변경: ndn-name 
