--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -22,7 +22,7 @@
   - INC 연동
   - 모니터링 (협의 필요)
 
-### 1. (완-반복테스트) 기능개선-KeyValue Store (mongodb)
+### 1. (95%-반복테스트) 기능개선-KeyValue Store (mongodb)
 #### 1-1. 상태 (기능개선-KeyValue Store)
 - mongodb 기반의 저장소 구축
   - db: difs
@@ -63,7 +63,7 @@
 
 ---
 
-### 3. (완-반복테스트) 기능개선-동적노드구성
+### 3. (90%-반복테스트) 기능개선-동적노드구성
 #### 3-1. 상태 (기능개선-동적노드구성)
 - 오퍼레이터 (저장소, 네트워크 관리자) 가 노드를 추가하는 것을 가정함
   - 오퍼레이터는 관리하는 저장소 및 네트워크의 name 등을 모두 알고 있음
@@ -100,7 +100,7 @@
 
 ---
 
-### 5. 기능개선-HashChain 1차
+### 5. (90%-반복테스트) 기능개선-HashChain 1차
 #### 5-1. 상태 (기능개선-HashChain 1차)
 - metaInfo 의 AppMetaInfo 를 사용하고자 하였으나 NFD 까지 영향이 있는 것으로 확인하여 더이상 진행하지 않음
 - content 필드의 앞부분 32bit 를 사용한 next-hash 구성
@@ -123,7 +123,9 @@
   - 방안2) timeout 적용
     - 데이터가 순서대로 오지 않으면 일정시간 대기후 timeout 발생
     - 일정시간 대기로 인하여 성능이 저하될 수 있음
-  - 성능 개선 (8월) 이후 시간이 된다면 적용 
+  - 성능 개선 (8월) 이후 시간이 된다면 적용
+    - 현 상태를 완료된 것으로 보아도 무방함
+    - 단, 순서대로 전송되지 않는 경우가 발생할 경우 방안1) 을 따르도록 되어있음 
 
 ---
 
@@ -144,7 +146,7 @@
 - 8월말 까지 목표로 성능 개선에 중점
 - 특히, HashChain 의 경우 여러 방안을 고민할 필요가 있음
 
-### 1. (완-반복테스트) 성능개선-ForwardingHint
+### 1. (95%-반복테스트) 성능개선-ForwardingHint
 - operator 가 insert 요청시 적용한 ndn-name 으로 저장
   - 기존: node-name/ndn-name
   - 변경: ndn-name 
@@ -157,7 +159,7 @@
 - 중복 코드 정리 및 메커니즘 정리
 - mongoDB 최적화
 
-### 3. 성능개선-HashChain 1차
+### 3. (60%-메커니즘) 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
   - 현재 Backward Chain 기반의 HashChain 구성으로 완전체 패킷을 뒤에서 부터 읽고 hash 를 만들어 next-hash 를 구성
   - next-hash 가 구성된 후 다시 1번 패킷부터 블록 생성
