--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -34,7 +34,7 @@
 
 ---
 
-### 2. 기능개선-모니터링
+### 2. (85%-이슈발생) 기능개선-모니터링
 #### 2-1. 상태 (기능개선-모니터링)
 - 클러스터링 정보
   - `build/bin/ndngetKeyInfo /<common-name>`
@@ -85,7 +85,7 @@
 
 ---
 
-### 4. 기능개선-INC 연동
+### 4. (20%-구현중) 기능개선-INC 연동
 #### 4-1. 상태 (기능개선-INC 연동)
 - INC container 를 미리 생성한다는 의미에서 producer 가 INC 로 생성된 container 인 경우
   - DIFS 는 container 로 데이터를 요청하여야 하는데
@@ -155,7 +155,7 @@
   - 변경: / 적용으로 모든 트래픽이 root 를 향할 수 있도록 함
 - 현재까지 특별한 이슈 없음
 
-### 2. 성능개선-코드 최적화
+### 2. (50%-성능최적화) 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
 - mongoDB 최적화
 
@@ -204,7 +204,7 @@
 - 주 담당자: 박세형 선임
 - 예상 시행 시기: 9월, 10월
 
-### 1. 기능개선-HashChain ver2
+### 1. (15%-설계중) 기능개선-HashChain ver2
 - TLV 를 사용한 next-hash 적용으로 프로세스를 줄이고자 함
 - DIFS 뿐만 아니라 여러 application 에서 활용 가능할 수 있도록 하기 위함
 - Signature Value 에 신규 TLV 추가
