--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -137,6 +137,44 @@
   - INC: INC 파트에서 DIFS 와 연동 관련 로컬 테스트를 진행하지 않는한 DIFS 에서는 로컬 연동 테스트를 할 수 없음
   - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 본 회의 후 dashboard 담당자에게 메일 연락 예정
     - _Interest_ 및 json 형식의 string 예제 전달
+    - 2021.07.13. 15:53 메일 발송 완료 (아래 메일 원문)
+```
+받는사람: sormfla@modutech.co.kr, geunii@modutech.co.kr
+참조: sungho@gurum.cc, taewoong@gurum.cc
+
+안녕하세요?
+
+ETRI 신용윤 입니다.
+
+KOREN 모니터링 저장소(DIFS) 파트 관련하여 다음과 같이 `Interest / 데이터 포멧` 을 알립니다.
+
+현재 4개의 노드가 클러스터를 구성하고 있으며 <common-name> 은 `/difs` 로 정의되어 있습니다.
+
+- DIFS :: main page
+  - Interest: `ndn://<common-name>/ringinfo`
+  - data: `{"keyspaces":[{"node":"\/seoul\/difs","start":"0x00","end":"0x7f"},{"node":"\/busan\/difs","start":"0x80","end":"0xbf"},{"node":"\/daejeon-01\/difs","start":"0xc0","end":"0xdf"},{"node":"\/daegu-01\/difs","start":"0xe0","end":"0xff"}]}`
+    - data 는 json 형식의 string 으로 제공되며 ‘\’ 이 포함되어 있으니 이점 유의 부탁드립니다.
+
+위 내용으로 4개의 노드는 각각 `/seoul/difs`,  `/busan/difs`, `/daejeon-01/difs`, `/daegu-01/difs` 임을 확인할 수 있습니다.
+또한 각 노드의 KEYSPACE 정보가 포함되어 있음을 확인할 수 있습니다.
+
+이 노드 중 /seoul/difs 와 /busan/difs 에 각각 데이터를 저장하고 각 노드의 정보를 살펴보면 다음과 같습니다.
+
+- DIFS :: after selection DIFS node
+  - Interest: `ndn://<node-name>/nodeinfo`
+  - data:
+    - /seoul/difs 의 경우: `{"name":"\/seoul\/difs\/info","disk":{"disk":{"size":"460440616","usage":"419559936"}},"memory":{"memory":{"size":"32784340","usage":"19956440"}},"datas":[{"data":"\/test\/%00%00"}],"manifests":[{"key":"7793e419e24287ca07c18103f02e7994978d5130"}]}`
+    - /busan/difs 의 경우: `{"name":"\/busan\/difs\/info","disk":{"disk":{"size":"460440616","usage":"419624936"}},"memory":{"memory":{"size":"32784340","usage":"21045444"}},"datas":[{"data":"\/test02\/%00%00"}],"manifests":”"}`
+    - /daejeon-01/difs 의 경우: `{"name":"\/daejeon-01\/difs\/info","disk":{"disk":{"size":"1152665260","usage":"1076758796"}},"memory":{"memory":{"size":"32784404","usage":"21382544"}},"datas":"","manifests":”"}`
+    - /daegu-01/difs 의 경우: `{"name":"\/daegu-01\/difs\/info","disk":{"disk":{"size":"460440616","usage":"419493160"}},"memory":{"memory":{"size":"32784340","usage":"20423308"}},"datas":"","manifests":[{"key":"f133a4599372cf531bcdbfeb1116b9afe8d09b4f"}]}`
+
+문의 사항이 있으시면 제게 문의해주시기 바랍니다.
+
+이상입니다.
+
+ETRI 신용윤 드림
+```
+
 #### 6-2. 이슈 (1차 KOREN 연동)
 - 8월 연동 일정에 따라 이슈 대처 예정
 
