--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -196,6 +196,7 @@ ETRI 신용윤 드림
 ### 2. (50%-성능최적화) 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
 - mongoDB 최적화
+  - bulk.insert / insertMany 등
 
 ### 3. (60%-메커니즘) 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
