--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -85,7 +85,7 @@
 
 ---
 
-### 4. (20%-구현중) 기능개선-INC 연동
+### 4. (80%-INC 연동 테스트 필요) 기능개선-INC 연동
 #### 4-1. 상태 (기능개선-INC 연동)
 - INC container 를 미리 생성한다는 의미에서 producer 가 INC 로 생성된 container 인 경우
   - DIFS 는 container 로 데이터를 요청하여야 하는데
@@ -95,7 +95,6 @@
     - container 는 완전하게 생성된 후 full-prefix 를 ForwardingHint 에 실어 ndnputfile 시 DIFS 로 전송
     - 기본적으로 ForwardingHint 와 동일 동작
 #### 4-2. 이슈 (기능개선-INC 연동)
-- 구현중
 - INC 파트에서 해당 기능이 검증되어야 하며 이때 DIFS lib 도 함께 검증할 수 있도록 함
 
 ---
