--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -2,7 +2,7 @@
 ## Minutes Of Meeting
 - 안건: DIFS 테스트 베드 구성 및 이슈 협의
   - 아래 명시함 (기능개선, 성능개선, HashChain ver2)
-    - 우선순위 아님
+    - 우선순위로 작성된 것은 아님
     - 회의 진행을 위하여 비교적 간단한 내용을 먼저 작성함
 - 참석자
   - 데이터중심네트워크연구실: 신용윤, 박세형
@@ -28,7 +28,7 @@
   - db: difs
   - collection: data/manifest
 #### 1-2. 이슈 (기능개선-KeyValue Store)
-- 현재까지 이슈 없음
+- 현재까지 기본 기능에 대한 이슈 없음
 - mongodb 자체가 메모리 영향을 받기 때문에 주의깊게 테스트 중
 - mongodb 자체의 성능 향상 포인트를 찾아 적용해볼 수 있음
 
@@ -60,10 +60,11 @@
     - data 는 segment 가 모두 표기되기 때문에 하나의 데이터라도 수많은 리스트가 발생할 수 있음
     - data 는 무조건 segment 의 첫번째만 표기함
     - 서로 다른 데이터에 대한 segment 를 구분할 수 있는지 확인 필요
+- 방안1) 을 기본으로 모니터링 담당자와 의견 조율 예정
 
 ---
 
-### 3. (90%-반복테스트) 기능개선-동적노드구성
+### 3. (95%-반복테스트) 기능개선-동적노드구성
 #### 3-1. 상태 (기능개선-동적노드구성)
 - 오퍼레이터 (저장소, 네트워크 관리자) 가 노드를 추가하는 것을 가정함
   - 오퍼레이터는 관리하는 저장소 및 네트워크의 name 등을 모두 알고 있음
@@ -85,7 +86,7 @@
 
 ---
 
-### 4. (80%-INC 연동 테스트 필요) 기능개선-INC 연동
+### 4. (90%-INC 연동 테스트 필요) 기능개선-INC 연동
 #### 4-1. 상태 (기능개선-INC 연동)
 - INC container 를 미리 생성한다는 의미에서 producer 가 INC 로 생성된 container 인 경우
   - DIFS 는 container 로 데이터를 요청하여야 하는데
@@ -191,11 +192,13 @@ ETRI 신용윤 드림
   - 기존: ndn-name 마다 라우팅 테이블 생성
   - 변경: / 적용으로 모든 트래픽이 root 를 향할 수 있도록 함
 - 현재까지 특별한 이슈 없음
+  - 현 상태를 완료로 봐도 무방함
 
 ### 2. (50%-성능최적화) 성능개선-코드 최적화
 - 중복 코드 정리 및 메커니즘 정리
 - mongoDB 최적화
   - bulk.insert / insertMany 등
+    - 관련 이슈는 difs github Issues 를 통하여 토의
 
 ### 3. (60%-메커니즘) 성능개선-HashChain 1차
 - 데이터 패킷 구성 지연
