--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -14,7 +14,7 @@
 
 ---
 
-## [기능개선]
+## [기능개선] - 대부분 완료 stage
 - 기본 기능 확인 완료
 - 발생가능한 모든 CASE 에 대응하는 것은 현 단계에서 필요하지 않은 것으로 판단함
 - 성능개선 (8월) 을 우선하며 성능개선 이후 여유가 되는 경우 적용함을 원칙으로 함 
@@ -180,7 +180,7 @@ ETRI 신용윤 드림
 
 ---
 
-## [성능개선]
+## [성능개선] - 중점 개발 stage
 - 8월말 까지 목표로 성능 개선에 중점
 - 특히, HashChain 의 경우 여러 방안을 고민할 필요가 있음
 
