--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -34,7 +34,7 @@
 
 ---
 
-### 2. (85%-이슈발생) 기능개선-모니터링
+### 2. (90%-연동테스트) 기능개선-모니터링
 #### 2-1. 상태 (기능개선-모니터링)
 - 클러스터링 정보
   - `build/bin/ndngetKeyInfo /<common-name>`
@@ -61,6 +61,7 @@
     - data 는 무조건 segment 의 첫번째만 표기함
     - 서로 다른 데이터에 대한 segment 를 구분할 수 있는지 확인 필요
 - 방안1) 을 기본으로 모니터링 담당자와 의견 조율 예정
+  - dashboard 담당(모두텍)에게 메일로  
 
 ---
 
@@ -138,6 +139,7 @@
   - dashboard: 관련 _Interest_ 에 대한 데이터 확인은 완료되었으며 본 회의 후 dashboard 담당자에게 메일 연락 예정
     - _Interest_ 및 json 형식의 string 예제 전달
     - 2021.07.13. 15:53 메일 발송 완료 (아래 메일 원문)
+    - 2021.07.16. 11:36 방안1에 대한 내용 메일 발송 완료 (아래 메일 원문)
 ```
 받는사람: sormfla@modutech.co.kr, geunii@modutech.co.kr
 참조: sungho@gurum.cc, taewoong@gurum.cc
@@ -173,6 +175,58 @@ KOREN 모니터링 저장소(DIFS) 파트 관련하여 다음과 같이 `Interes
 이상입니다.
 
 ETRI 신용윤 드림
+
+---
+
+받는사람: sormfla@modutech.co.kr, geunii@modutech.co.kr
+참조: sungho@gurum.cc, taewoong@gurum.cc
+
+안녕하세요?
+
+한국전자통신연구원 신용윤 입니다.
+
+일전에 저장소 모니터링 관련한 메일을 보내드렸습니다. (하단 메일 원문)
+
+다름이 아니라 한가지 알려드릴 사항이 있어 메일을 보냅니다.
+
+모니터링 기능 중 각 노드의 cpu/mem/data/manifest 등의 정보를 보는 페이지가 있습니다.
+
+- 정보 중에 data/manifest 의 경우 파일이 규정 크기를 넘어갈 수 있습니다.
+  - NDN 에서 패킷의 크기는 8,800 byte 입니다.
+  - 즉, 데이터 조각은 8,800byte 로 쪼개져서 저장이 됩니다.
+  - 이러한 경우 저장된 데이터가 64M 라면 약 7,200 개의 조각이 생성됩니다.
+  - 또한, manifest 도 시간이 지나면서 점점 늘어나게 됩니다.
+
+- dashboard 에서 저장소로 `ndn://<node-name>/nodeinfo` 을 전송하는 경우
+  - 데이터 조각의 name 을 모두 담아서 응답하기 때문에 8,800 byte 를 넘어갈 수 있습니다.
+  - 이 경우 DIFS 는 모니터링 응답 패킷을 나누고 segment 번호를 붙이게 됩니다.
+    - 64M 데이터에 대한 조각은 약 7,200 개가 생성되며 각 조각마다 순차적으로 segment 번호가 생성됩니다.
+  - 위 Interest 의 응답으로 첫번째 조각이 전송되며 패킷 정보에 마지막 조각 번호가 포함됩니다.
+    - 2번 조각을 얻기 위하여 dashboard 에서 다음과 같이 Interest 를 발생하여야 합니다.
+      - `ndn://<node-name>/nodeinfo/<segment number>`
+      - <segment number> 는 순차적으로 증가합니다.
+  - dashboard 에서 마지막 조각을 획득하고 조각을 합체하면 데이터가 완성됩니다.
+  - dashboard 파트에서 화면을 구성할 때 적절히 표현될 수 있도록 반영하셔야 합니다.
+    - 	64M 데이터에 대한 리스트 7,200 개를 받았다면 ‘xxxx 외 7,150’ 등으로 표기
+
+이상입니다.
+
+신용윤 드림
+
+=== [답장확인]
+
+받는사람: uni2u@etri.re.kr, sungho@gurum.cc, taewoong@gurum.cc
+참조: sormfla@modutech.co.kr
+
+안녕하세요.
+(주)모두텍 신동근입니다.
+
+전달 주신대로 세그먼트 번호를 이용해 interest를 보내고
+data를 merge할 수 있도록 구현하겠습니다.
+
+감사합니다.
+신동근 드림
+
 ```
 
 #### 6-2. 이슈 (1차 KOREN 연동)
