--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -61,7 +61,8 @@
     - data 는 무조건 segment 의 첫번째만 표기함
     - 서로 다른 데이터에 대한 segment 를 구분할 수 있는지 확인 필요
 - 방안1) 을 기본으로 모니터링 담당자와 의견 조율 예정
-  - dashboard 담당(모두텍)에게 메일로  
+  - dashboard 담당(모두텍)에게 메일로 의견 조율함
+  - 방안1에 대한 모두텍 담당자의 수용 메일 답변 받음 (2021.07.19. 08:55)
 
 ---
 
@@ -140,6 +141,7 @@
     - _Interest_ 및 json 형식의 string 예제 전달
     - 2021.07.13. 15:53 메일 발송 완료 (아래 메일 원문)
     - 2021.07.16. 11:36 방안1에 대한 내용 메일 발송 완료 (아래 메일 원문)
+    - 2021.07.19. 08:55 방안1에 대한 모두텍 담당자 수용 답장 받음 (아래 메일 원문)
 ```
 받는사람: sormfla@modutech.co.kr, geunii@modutech.co.kr
 참조: sungho@gurum.cc, taewoong@gurum.cc
