--- a/meet/20210715_mom.md
+++ b/meet/20210715_mom.md
@@ -63,6 +63,8 @@
 - 방안1) 을 기본으로 모니터링 담당자와 의견 조율 예정
   - dashboard 담당(모두텍)에게 메일로 의견 조율함
   - 방안1에 대한 모두텍 담당자의 수용 메일 답변 받음 (2021.07.19. 08:55)
+  - DIFS 에서 모니터링 관련 데이터 생성시 segment num 을 추가하여야 함
+    - 첫번째 데이터를 전송하면서 LAST_BLOCK_ID 를 명시하여 dashboard 가 접근할 수 있도록 
 
 ---
 
